--- a/ShopSystem.csproj
+++ b/ShopSystem.csproj
@@ -55,6 +55,11 @@
     <Compile Include="Services\OrdersHistoryServiceAsync.cs" />
     <Compile Include="Services\ShopProductsService.cs" />
     <Compile Include="Services\ShopProductsServiceAsync.cs" />
+    <Compile Include="UI\BalanceReplenishmentController.cs" />
+    <Compile Include="UI\CreateUserController.cs" />
+    <Compile Include="UI\GeneralController.cs" />
+    <Compile Include="UI\IUserInterface.cs" />
+    <Compile Include="UI\ShowShopProductsController.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
